2010-12-29: Implemented a few basic functionalities:
  * Address.of(Object):
      Gets the begin address of an object.
      Doesn't work with -XX:+UseCompressedOops yet.
  * Dereference
      Dereferences an memory address to get data of the specified width.
  * ReinterpretCast
      Does pretty much the same as what C++'s reinterpret_cast<> would do.
  * MarkWord
      Plays around with the _mark field in object headers.

NOTE: These rely heavily on HotSpot implementation detail from JDK6.
      It won't work with other JVMs or even other versions of HotSpot.